juniper-from-schema/tests/compile_fail/invalid_as_ref_type.stderr
error: proc macro panicked
  --> $DIR/invalid_as_ref_type.rs:4:1
   |
4  | / juniper_from_schema::graphql_schema! {
5  | |     type Query {
6  | |       asRefString: String! @juniper(ownership: "as_ref")
7  | |     }
...  |
11 | |     }
12 | | }
   | |_^
   |
   = help: message:

           error: @juniper(ownership: "as_ref") is only supported on `Option` and `Vec` types
            --> schema:1:14
             |
           1 |    type Query { asRefString : String ! @ juniper(ownership : "as_ref") } schema
             |                 ^

           aborting due to previous error

error[E0405]: cannot find trait `QueryFields` in this scope
  --> $DIR/invalid_as_ref_type.rs:16:6
   |
16 | impl QueryFields for Query {
   |      ^^^^^^^^^^^ not found in this scope
